# kit

./: .gitmodules  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build-and-publish.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db_manager.rs  libsql.rs  main.rs  native.rs
