[package]
name = "kit"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "updater", "macos-private-api",
    "window-close",
    "window-unminimize",
    "window-show",
    "window-hide",
    "window-minimize",
    "window-start-dragging",
    "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rusqlite = "0.28.0"
window-shadows = "0.2.1"
libsql-client = "0.31.11"
tokio = { version = "1", features = ["full"] }
mac_address = "1.1.5"
reqwest = "0.11.20"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
